syntax = "proto3";

package proto;

service RequestService {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Queue(QueueRequest) returns (QueueResponse) {}
}

message GetRequest {
    string id = 1;
}

message GetResponse {
    string body = 1;
    string error = 2;
}

message QueueRequest {
    string url = 1;
}

message QueueResponse {
    string id = 1;
}
